<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bem_vindo_ao_organizador_de_tarefas"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:src="@drawable/schedule_bro"
                android:contentDescription="@string/calend_rio"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:autofillHints="Email"
                android:ems="10"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/Login"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:text="@string/entrar"
                android:backgroundTint="@color/ciano"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/Criar_conta"
                android:layout_width="200dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:backgroundTint="@color/ciano"
                android:text="@string/criar_conta"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Esqueceu_Senha"
                android:layout_width="250dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:backgroundTint="@color/Trans"
                android:textColor="@color/Azul"
                android:text="@string/esqueceu_a_senha"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>