<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/crie_sua_conta_aqui"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/hotel_booking_pana"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:autofillHints="Email"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/Criar_conta2"
                android:layout_width="200dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:backgroundTint="@color/ciano"
                android:text="@string/criar_conta2"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>